welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: ')' expected but '=' found.
	if ( (a % 10) = (b % 10 )) {
                      ^lastDigit:2: error: illegal start of simple expression
	if ( (a % 10) = (b % 10 )) {
                                 ^